# kab

./: .gitignore  Cargo.toml  README.md  \  build_and_debug.sh  build_and_run.sh  build_manually_and_debug.sh  build_manually_and_run.sh  build_run_and_log.sh  gab_kernel.elf  log_file.txt  x86_64-gab_os.json
.cargo/: config.toml
notes/: TODOs.md  alloc.md  atomics.md  global_allocator.md  interrupts.md  multiboot.md  runtime_static.md
notes/MemoryManagment/: intruduction_to_paging.md  memory_managment.md
notes/paging/: frame_allocator.md
src/: gdt.rs  init.rs  interrupt_handlers.s  interrupts.rs  kernel.rs  linker.ld  linker_viktor.ld  port.rs  runtime_static.rs  start.s  vga_buffer.rs
src/concurrency/: spin_mutex.rs
src/interrupts/: idt.rs  interrupt_handlers.s  interrupt_manager.rs  mod.rs
src/memory_manager/: .heap_allocator.rs.rustfmt  frame_allocator.rs  global_allocator.rs  heap_allocator.rs  memory_manager.s  mod.rs  paging.rs
src/multiboot/: mod.rs
src/multiboot2/: mod.rs
