[lib]
crate-type = [ "staticlib" ]
name = "kernel"
path = "src/kernel.rs"

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
overflow-checks = false

[profile.release]
panic = "abort"
overflow-checks = false

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
